--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
       <artifactId>vertx-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
+	<dependency>
+	    <groupId>io.vertx</groupId>
+	    <artifactId>vertx-web</artifactId>
+	    <version>4.5.10</version>
+	</dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
