--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 	</dependency>
 
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
+      <groupId>org.junit.jupiter</groupId>	
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit-jupiter.version}</version>
       <scope>test</scope>
@@ -65,6 +65,20 @@
       <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+	    <groupId>com.mysql</groupId>
+	    <artifactId>mysql-connector-j</artifactId>
+	    <version>9.1.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+	<dependency>
+	    <groupId>io.github.cdimascio</groupId>
+	    <artifactId>dotenv-java</artifactId>
+	    <version>3.0.2</version>
+	</dependency>
+
   </dependencies>
 
   <build>
