--- a/Frontend/my-registration-app/package.json
+++ b/Frontend/my-registration-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "my-registration-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
