--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>starterjavaTeamProject</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <properties>
+ <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -16,7 +16,7 @@
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 
-    <vertx.version>4.5.10</vertx.version>
+    <vertx.version>4.5.11</vertx.version>
     <junit-jupiter.version>5.9.1</junit-jupiter.version>
 
     <main.verticle>javaTeamProject.starterjavaTeamProject.MainVerticle</main.verticle>
@@ -38,7 +38,11 @@
   <dependencies>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
+      <artifactId>vertx-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-mysql-client</artifactId>
     </dependency>
 
     <dependency>
@@ -46,15 +50,8 @@
       <artifactId>vertx-junit5</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
-	<dependency>
-	    <groupId>io.vertx</groupId>
-	    <artifactId>vertx-web</artifactId>
-	    <version>4.5.10</version>
-	</dependency>
-
     <dependency>
-      <groupId>org.junit.jupiter</groupId>	
+      <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit-jupiter.version}</version>
       <scope>test</scope>
@@ -65,19 +62,17 @@
       <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
-    
-    <dependency>
-	    <groupId>com.mysql</groupId>
-	    <artifactId>mysql-connector-j</artifactId>
-	    <version>9.1.0</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
 	<dependency>
 	    <groupId>io.github.cdimascio</groupId>
-	    <artifactId>dotenv-java</artifactId>
-	    <version>3.0.2</version>
+	    <artifactId>java-dotenv</artifactId>
+	    <version>5.2.2</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.hibernate.reactive</groupId>
+	    <artifactId>hibernate-reactive-core</artifactId>
+	    <version>2.4.2.Final</version>
+	</dependency>
+
 
   </dependencies>
 
@@ -87,7 +82,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <release>17</release>
+          <release>21</release>
         </configuration>
       </plugin>
       <plugin>
