route /users/one/:id
implementation + test

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ DB_URL = "jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC&chara
 USER = "root"
 PASSWORD = "rootroot"
 USERS_TABLE_NAME = "users"
+PORT = "8080"
