--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -64,9 +64,28 @@
       <artifactId>vertx-web</artifactId>
     </dependency>
     <dependency>
+	 <groupId>io.vertx</groupId>
+	 <artifactId>vertx-web-client</artifactId>
+	 <version>4.5.11</version>
+	</dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-mysql-client</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.16.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.datatype</groupId>
+	    <artifactId>jackson-datatype-jsr310</artifactId>
+	    <version>2.16.1</version>
+	</dependency>
+
+
 
     <dependency>
       <groupId>io.vertx</groupId>
