--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -36,7 +36,22 @@
   </dependencyManagement>
 
   <dependencies>
-  <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
+  <dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jdk8</artifactId>
+    <version>2.18.2</version>
+  </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.18.2</version>
+    </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
 	<dependency>
 	    <groupId>org.mockito</groupId>
 	    <artifactId>mockito-junit-jupiter</artifactId>
