--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
-DB_URL = "jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC&characterEncoding=utf8"
+DB_URL = ""
 USER = "root"
-PASSWORD = "rootroot"
+PASSWORD = "root"
 USERS_TABLE_NAME = "users"
 PORT = "8080"
 DB_NAME = "test"
