add session saving to Redis
Add Redis support for saving user sessions

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -36,7 +36,14 @@
   </dependencyManagement>
 
   <dependencies>
-  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
+    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-redis-client -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-redis-client</artifactId>
+      <version>4.5.11</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
   <dependency>
     <groupId>com.fasterxml.jackson.datatype</groupId>
     <artifactId>jackson-datatype-jdk8</artifactId>
