--- a/Frontend/my-registration-app/package.json
+++ b/Frontend/my-registration-app/package.json
@@ -6,10 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.115",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^16.18.123",
     "axios": "^1.7.7",
     "my-registration-app": "file:",
     "react": "^18.3.1",
@@ -43,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.1"
   }
 }
