--- a/Frontend/my-registration-app/package.json
+++ b/Frontend/my-registration-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.123",
     "axios": "^1.7.7",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "my-registration-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
