--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -36,6 +36,14 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-mail-client -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-mail-client</artifactId>
+      <version>4.5.11</version>
+    </dependency>
+
+
     <!-- https://mvnrepository.com/artifact/io.vertx/vertx-redis-client -->
     <dependency>
       <groupId>io.vertx</groupId>
