--- a/Backend/.env
+++ b/Backend/.env
@@ -6,6 +6,6 @@ PORT = "8080"
 DB_NAME = "test"
 DB_PORT = "3306"
 AES_KEY = "AesEncryptionKey"
-MAIL_ADDRESS = "no.passion.there.is.serenity@gmail.com"
-MAIL_PASSWORD = "mqkk fdre cuak qmtp"
+MAIL_ADDRESS = ""
+MAIL_PASSWORD = ""
 FRONTEND_HOME = "http://localhost:3000"
